Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-87708

[Reg 5.15.0 -> 5.15.1] header's width isn't resized to window's width when Layout is used

XMLWordPrintable

    • macOS, Windows
    • fea242475 (dev), 95788aefb (6.9), 844e900b6 (tqtc/lts-6.8), 96b067c5d (tqtc/lts-6.5), 9352ef3c1 (dev), 5cf223ccc (6.10)

      header's and footer's width should be resized to Window's width according to https://doc.qt.io/qt-5/qml-qtquick-controls2-applicationwindow.html#header-prop
      However, it is not resized in Qt5.15.1 when layout is used. This works fine with Qt5.15.0.

      • The problem appears only when the app starts. If you resize the window, the header's width is adjusted accordingly.
      • The header's width is adjusted properly when using other component, e.g. Rectangle

      The workaround would be to bind the item's width to the parent.width but this shouldn't be necessary.

      ApplicationWindow {
      
          header: RowLayout {
              Label {
                  text: "Label 1"
              }
              Label {
                  text: "Label 2"
              }
              Label {
                  text: "Label 3"
              }
          }
      

      How to reproduce :

      Expected result (Also the result of Qt5.15.0)

      Actual result

        1. QTBUG-87708_ApplicationWindowResizeIssue.zip
          2 kB
          Nahomi Gröhn
        2. headerWidth_not_working.png
          11 kB
          Nahomi Gröhn
        3. headerWidth_working(Qt5.15.0).png
          12 kB
          Nahomi Gröhn
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            smd Jan Arve
            nagrohn Nahomi Gröhn (Inactive)
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: