Add recursion guard to QQuickApplicationWindowPrivate::relayout()

relayout() might change the size of the header, footer or contentitem
When one of those items changes, QQuickApplicationWindowPrivate will
get notified by that through
QQuickApplicationWindowPrivate::itemGeometryChanged().
itemGeometryChanged() will then call relayout()... (*recursed*).

Task-number: QTBUG-87708
Change-Id: I9403952e776afb2be37d009642c65b5520c79341
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>
(cherry picked from commit 6dc95399797de4ec27984956df1fa587f4eb18ba)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>